test/test_11710324_4.spl
int test_1_m01(int a, int b)
{
  int code, new;
  code = 0xf0;
  new = 0xzz;
  new = $ + new - 0xkkk;

  return hello('a, new);
}